# embed_redirect

./: Cargo.toml
src/: main.rs
